# console-photoshop

./: .gitignore  readme.md
project_photoshop/: CMakeLists.txt  app_exceptions.h  application.cpp  application.h  base_filter.h  bitmap.cpp  bitmap.h  blur.cpp  blur.h  command_line_parser.cpp  command_line_parser.h  crop_filter.cpp  crop_filter.h  edge_detection.cpp  edge_detection.h  filter_pipeline_maker.cpp  filter_pipeline_maker.h  grayscale.cpp  grayscale.h  main.cpp  negative.cpp  negative.h  sharpening.cpp  sharpening.h
